--- a/deploy/styles/sass/screen.scss
+++ b/deploy/styles/sass/screen.scss
@@ -23,3 +23,30 @@ body {
     align-self: center;
   }
 }
+
+.overlay,
+.end-game-popup {
+  position: absolute;
+}
+
+.overlay {
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
+.end-game-popup {
+  width: 20%;
+  height: 20%;
+  left: 40%;
+  top: 40%;
+  background-color: white;
+  z-index: 2;
+
+  .restart-button {
+    width: 200px;
+    height: 200px;
+  }
+}
