--- a/deploy/styles/stylesheets/screen.css
+++ b/deploy/styles/stylesheets/screen.css
@@ -126,3 +126,33 @@ body .game-canvas {
   flex-wrap: wrap-reverse;
   align-self: center;
 }
+
+/* line 27, ../sass/screen.scss */
+.overlay,
+.end-game-popup {
+  position: absolute;
+}
+
+/* line 32, ../sass/screen.scss */
+.overlay {
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
+/* line 40, ../sass/screen.scss */
+.end-game-popup {
+  width: 20%;
+  height: 20%;
+  left: 40%;
+  top: 40%;
+  background-color: white;
+  z-index: 2;
+}
+/* line 48, ../sass/screen.scss */
+.end-game-popup .restart-button {
+  width: 200px;
+  height: 200px;
+}
